# mcp-musescore

./: README.md  mu4-qml-experiment-log.md  musescore-mcp-websocket.qml  pyproject.toml  server.py
.claude/: settings.local.json
docs/plans/: 2026-03-08-generic-elements-discovery-export.md
src/: pitch.py  registry.py
src/client/: websocket_client.py
src/tools/: __init__.py  connection.py  elements.py  navigation.py  notation.py  notes_measures.py  sequences.py  staff_instruments.py  time_tempo.py  tips.py
src/types/: __init__.py  action_types.py
tests/: test_notation.py  test_pitch.py
