[project]
name = "mcp-musescore"
version = "1.0.0"
description = "MCP server that bridges Claude to MuseScore via WebSocket"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "websockets",
]

[dependency-groups]
dev = [
    "basedpyright",
]

[tool.basedpyright]
pythonVersion = "3.12"
reportUnusedFunction = false
reportUntypedFunctionDecorator = false
reportUnusedCallResult = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportAny = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownMemberType = false

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
